# pymagewell

./: .gitattributes  LICENSE  MANIFEST.in  README.md  audiorender.py  avcapture.py  avcapturewid.py  capture.py  capture_by_input.py  capture_script.py  example_script.py  generate_docs.sh  generate_docs_macos.sh  linters_and_black.bat  module.html.jinja2  mp4filesave.py  mwcap.py  pyproject.toml  scratch.py  setup.cfg  setup.py  videorender.py
.github/workflows/: pymagewell-linters.yml  pymagewell-publish-to-pypi.yml  pymagewell-publish-to-test-pypi.yml  pymagewell-unit-tests.yml  pymagwell-docs-pages.yml
docs/: contents.html  index.html  search.js
mwcapture/: __init__.py  libmwavencoder.py  libmwcapture.py  libmwmp4.py
pymagewell/: __init__.py  _version.py  device.py  event.py  event_state.py  frame.py  frame_grabber.py  frame_transferrer.py  notifications.py  pro_capture_controller.py  pro_capture_device.py  settings.py  video_frame.py
pymagewell/events/: __init__.py  device_events.py  event.py  event_base.py  events.py  notification.py
pymagewell/events/mock_win32api/: __init__.py
pymagewell/events/mock_win32event/: __init__.py
pymagewell/pro_capture_device/: __init__.py  device_interface.py  device_settings.py  device_status.py  mock_pro_capture_device.py  pro_capture_device.py  pro_capture_device_impl.py
src/mwcapture/: README.md  __init__.py  libmwcapture.py
src/pymagewell/: conversion.py  exceptions.py  pro_capture_controller.py  video_frame.py
src/pymagewell/events/mock_win32event/: __init__.py
src/pymagewell/pro_capture_device/: __init__.py  device_interface.py  device_settings.py  device_status.py  mock_pro_capture_device.py  pro_capture_device.py  pro_capture_device_impl.py
src/tests/: conftest.py  test_capture_controller.py  test_device.py  test_frame.py
tests/: config.py  conftest.py  test_capture_controller.py  test_device.py  test_event.py
