[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.pytest.ini_options]
# markers = [
#     "integration: marks tests as an integration test.",
#     "only_without_driver: marks test to only be run on systems without Spectrum drivers installed (e.g. during CI).",
# ]