[metadata]
name = pymagewell
description = Python interface for Magewell ProCapture SDK
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/KCL-BMEIS/pymagewell
author = Christian Baker
author_email = christian.baker@kcl.ac.uk,
license = MIT
license_file = LICENSE
classifiers =
 Development Status :: 4 - Beta
 Intended Audience :: Developers
 Intended Audience :: Information Technology
 Intended Audience :: Science/Research
 License :: OSI Approved :: MIT License
 Natural Language :: English
 Operating System :: Microsoft :: Windows :: Windows 10
 Operating System :: POSIX :: Linux
 Operating System :: MacOS :: MacOS X
 Programming Language :: Python :: 3.9
 Programming Language :: Python :: 3.10
 Topic :: Multimedia :: Video :: Capture
 Typing :: Typed
project_urls =
 Source = https://github.com/KCL-BMEIS/pymagewell
 Tracker = https://github.com/KCL-BMEIS/pymagewell/issues

[options]
zip_safe = False
packages =
  pymagewell
  pymagewell.events
  pymagewell.events.mock_win32api
  pymagewell.events.mock_win32event
  pymagewell.pro_capture_device
  mwcapture
package_dir =
  =.
include_package_data = True
install_requires =
 numpy>=1.23.4
 pywin32>=303; platform_system=="Windows"
 opencv-python>=4.6.0

python_requires = >=3.8

[options.package_data]
* = py.typed

[bdist_wheel]
universal = false

[aliases]
test=pytest

[options.extras_require]
test =
 pytest == 6.2.5
dev =
 flake8 == 4.0
 flake8-bugbear == 21.9.2
 black == 22.3.0
 mypy == 0.931
doc =
 pdoc == 8.0.1

[mypy]
python_version = 3.8
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

# Prevent setup.py typing errors
[mypy-setup]
ignore_errors = True

# Prevent third party typing errors
[mypy-mwcapture.*]
ignore_errors = True

[mypy-win32api.*]
ignore_missing_imports = True

[mypy-win32event.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-versioneer]
ignore_errors = True

[mypy-pymagewell._version]
ignore_errors = True

[flake8]
exclude = .bzr,.hg,.git,__pycache__,.tox,setup.py,.eggs,spectrum_gmbh,scratch,htmlcov,.pytest_cache,.mypy_cache,.github,_version.py
max-line-length = 120
application_import_names = pymagewell, tests
import-order-style = pycharm
ignore=E127,E126,W504,W503,F541,E501,E203

[versioneer]
VCS = git
style = pep440
versionfile_source = pymagewell/_version.py
tag_prefix = v
